Android/library/src/main/cpp/core/jni_helper.h

/**
 * 获取 JavaVM
 */
JavaVM* jnihelper_get_jvm();
/**
 * 获取 JNIEnv（自动附加当前线程）
 */
JNIEnv* jnihelper_get_env();
/**
 * 查找 Java 类（返回全局引用）
 */
jclass jnihelper_find_class(const char *class_name);
/**
 * 获取方法 ID
 */
jmethodID jnihelper_get_method_id(jclass clazz, const char *method_name, const char *signature);
/**
 * 获取静态方法 ID
 */
jmethodID jnihelper_get_static_method_id(jclass clazz, const char *method_name, const char *signature);
/**
 * 获取字段 ID
 */
jfieldID jnihelper_get_field_id(jclass clazz, const char *field_name, const char *signature);
/**
 * 获取静态字段 ID
 */
jfieldID jnihelper_get_static_field_id(jclass clazz, const char *field_name, const char *signature);
/**
 * 创建 Java String
 */
jstring jnihelper_new_string(const char *str);
/**
 * Java String 转 C string（需要调用者释放内存）
 */
char* jnihelper_get_string(jstring jstr);
/**
 * 删除本地引用
 */
void jnihelper_delete_local_ref(jobject obj);
/**
 * 删除全局引用
 */
void jnihelper_delete_global_ref(jobject obj);
jobject jnihelper_new_global_ref(jobject obj);
jobject jnihelper_new_local_ref(jobject obj);
/**
 * 检查并清除异常
 */
jboolean jnihelper_check_exception();
void jnihelper_clear_exception();
const char* jnihelper_get_string_utf_chars(jstring jstr);
void jnihelper_release_string_utf_chars(jstring jstr, const char *utf);
jsize jnihelper_get_string_length(jstring jstr);
jstring jnihelper_new_string_utf(const char *utf);
/**
 * 获取当前 Activity 或 Application
 */
jobject jnihelper_get_current_activity();
/**
 * 获取 Unity Surface
 * 调用链: UnityPlayer.currentActivity -> mUnityPlayer -> getSurfaceView() -> getHolder() -> getSurface()
 */
jobject jnihelper_get_unity_surface();
/**
 * 获取 Unity ANativeWindow（从 Surface 对象转换）
 * 返回可用于 ImGui_ImplAndroid_Init 的 ANativeWindow*
 */
struct ANativeWindow* jnihelper_get_unity_native_window();
/**
 * 通用 JNI 调用辅助（供 C# P/Invoke 使用）
 */
jobject jnihelper_call_object_method(jobject obj, jmethodID methodID);
jobject jnihelper_call_object_method_a(jobject obj, jmethodID methodID, const jvalue *args);
jboolean jnihelper_call_boolean_method_a(jobject obj, jmethodID methodID, const jvalue *args);
jbyte jnihelper_call_byte_method_a(jobject obj, jmethodID methodID, const jvalue *args);
jchar jnihelper_call_char_method_a(jobject obj, jmethodID methodID, const jvalue *args);
jshort jnihelper_call_short_method_a(jobject obj, jmethodID methodID, const jvalue *args);
jint jnihelper_call_int_method_a(jobject obj, jmethodID methodID, const jvalue *args);
jlong jnihelper_call_long_method_a(jobject obj, jmethodID methodID, const jvalue *args);
jfloat jnihelper_call_float_method_a(jobject obj, jmethodID methodID, const jvalue *args);
jdouble jnihelper_call_double_method_a(jobject obj, jmethodID methodID, const jvalue *args);
void jnihelper_call_void_method_a(jobject obj, jmethodID methodID, const jvalue *args);
jobject jnihelper_call_static_object_method(jclass clazz, jmethodID methodID);
jobject jnihelper_call_static_object_method_a(jclass clazz, jmethodID methodID, const jvalue *args);
jboolean jnihelper_call_static_boolean_method_a(jclass clazz, jmethodID methodID, const jvalue *args);
jbyte jnihelper_call_static_byte_method_a(jclass clazz, jmethodID methodID, const jvalue *args);
jchar jnihelper_call_static_char_method_a(jclass clazz, jmethodID methodID, const jvalue *args);
jshort jnihelper_call_static_short_method_a(jclass clazz, jmethodID methodID, const jvalue *args);
jlong jnihelper_call_static_long_method_a(jclass clazz, jmethodID methodID, const jvalue *args);
jfloat jnihelper_call_static_float_method_a(jclass clazz, jmethodID methodID, const jvalue *args);
jdouble jnihelper_call_static_double_method_a(jclass clazz, jmethodID methodID, const jvalue *args);
void jnihelper_call_static_void_method_a(jclass clazz, jmethodID methodID, const jvalue *args);
jint jnihelper_call_static_int_method_a(jclass clazz, jmethodID methodID, const jvalue *args);
jobject jnihelper_call_static_object_method0(jclass clazz, jmethodID methodID);
jobject jnihelper_call_static_object_method1(jclass clazz, jmethodID methodID, jobject arg1);
jobject jnihelper_call_static_object_method2(jclass clazz, jmethodID methodID, jobject arg1, jobject arg2);
jobject jnihelper_call_static_object_method3(jclass clazz, jmethodID methodID, jobject arg1, jobject arg2, jint arg3);
void jnihelper_call_static_void_method0(jclass clazz, jmethodID methodID);
void jnihelper_call_static_void_method1(jclass clazz, jmethodID methodID, jboolean arg1);
void jnihelper_call_static_void_method2(jclass clazz, jmethodID methodID, jobject arg1, jobject arg2);
jint jnihelper_call_static_int_method0(jclass clazz, jmethodID methodID);
jobject jnihelper_get_static_object_field(jclass clazz, jfieldID fieldID);
jobject jnihelper_get_object_field(jobject obj, jfieldID fieldID);
jboolean jnihelper_get_boolean_field(jobject obj, jfieldID fieldID);
jbyte jnihelper_get_byte_field(jobject obj, jfieldID fieldID);